ingress-test/apple.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
  - image: hashicorp/http-echo
    name: apple-container
    args:
    - "-text=apple"
---

apiVersion: v1
kind: Service
metadata:
  name: apple-svc
  labels:
    app: apple
spec:
  type: NodePort
  selector:
    app: apple
  ports:
  - appProtocol: TCP
    port: 5678
---
