ingress-test/banana.yaml
apiVersion: v1
kind: Pod
metadata:
  name: banana-app
  labels:
    app: banana
spec:
  containers:
  - image: hashicorp/http-echo
    name: banana-container
    args:
    - "-text=banana"
---

apiVersion: v1
kind: Service
metadata:
  name: banana-svc
  labels:
    app: banana
spec:
  type: NodePort
  selector:
    app: banana
  ports:
  - appProtocol: TCP
    port: 5678
---
