ingress-test/grape.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grape-app
  labels:
    app: grape
spec:
  containers:
  - image: hashicorp/http-echo
    name: grape-container
    args:
    - "-text=grape"
---

apiVersion: v1
kind: Service
metadata:
  name: grape-svc
  labels:
    app: grape
spec:
  type: NodePort
  selector:
    app: grape
  ports:
  - appProtocol: TCP
    port: 5678
---
