ingress-test/hello.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-app
  labels:
    app: hello
spec:
  containers:
  - image: hashicorp/http-echo
    name: hello-container
    args:
    - "-text=hello"
---

apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - appProtocol: TCP
    port: 5678
---
