ingress-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruits-ingress
  labels:
    app: fruits
spec:
  defaultBackend:
    service:
      name: hello-svc
      port:
        number: 5678
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        path: /apple
        backend:
          service:
            name: apple-svc
            port: 
              number: 5678
      - path:
        pathType: Prefix
        path: /grape
        backend:
          service:
            name: grape-svc
            port: 
              number: 5678
            
      - path:
        pathType: Prefix
        path: /banana
        backend:
          service:
            name: banana-svc
            port:
              number: 5678
---
